<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity"
    >
    <ImageView
        android:layout_width="@dimen/width_size"
        android:layout_height="@dimen/heigth_size"
        android:src="@drawable/perso"
        android:id="@+id/img_one"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_two"
        android:layout_below="@id/img_one">
        <Button
            android:layout_width="@dimen/size_padding"
            android:layout_height="@dimen/heigth_size"
            android:text="agregar"
            android:onClick="nextActivity"
            android:layout_gravity="center"
            android:id="@+id/btn_add"
          />
    </LinearLayout>
    <ImageView
        android:id="@+id/imv_photo"
        android:layout_width="352dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin_size"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@id/linear_two"
        android:layout_weight="0.33" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear"
        android:layout_below="@id/imv_photo"
        android:layout_margin="@dimen/square_size">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_name"
            android:text="@string/txt_name"
            android:textSize="@dimen/margin_true"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_station"
            android:text="@string/txt_station"
            android:textSize="@dimen/word_size"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_scholarship"
            android:text="@string/txt_scholarship"
            android:textSize="@dimen/letter_size"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_size"/>
    </LinearLayout>

    <Button
        android:layout_width="@dimen/size_padding"
        android:layout_height="@dimen/heigth_size"
        android:text="@string/txt_edit"
        android:id="@+id/btn_edit"
        android:layout_below="@id/linear"
        />
    <Button
        android:layout_width="200px"
        android:layout_height="100px"
        android:text="eliminar"
        android:layout_below="@id/linear"
        android:layout_toRightOf="@id/btn_edit"
        android:id="@+id/btn_delete"/>


</RelativeLayout>
